--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>Pizza Sizes</title>
-<link rel="stylesheet" href="./css/main.css">
+<link rel="stylesheet" href="./index.css">
 <body>
+    <button onclick="window.location.href='./gestionar-pizzas/ver-pizzas/ver-pizzas.html'">Gestionar Pizzas</button>
     <h1 class="text-center"><strong>Pizza Sizes</strong></h1>
     <div class="container flex">
         <aside>
@@ -39,6 +40,6 @@
             <!-- Las tarjetas de pizza se cargarán aquí dinámicamente -->
         </section>
     </div>
-    <script src="./js/main.js"></script>
+    <script src="./index.js"></script>
 </body>
 </html>
