--- a/public/gestionar-pizzas/crear-pizza/crear-pizza.html
+++ b/public/gestionar-pizzas/crear-pizza/crear-pizza.html
@@ -3,42 +3,60 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Crear Pizza</title>
+    <link rel="icon" type="image/x-icon" href="../../assets/logo.ico" />
+    <link rel="stylesheet" href="../../index.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
+    <title>PizzARG | Pizza</title>
   </head>
-  <body>
-    <h1>Crear Pizza</h1>
-    <form id="createPizzaForm">
-      <label for="nombre">Nombre:</label>
-      <input type="text" id="nombre" name="nombre" required /><br /><br />
+  <body class="crud-body">
+    <div class="crud-container">
+      <form id="createPizzaForm">
+        <label for="nombre">Nombre:</label>
+        <input type="text" id="nombre" name="nombre" required /><br /><br />
 
-      <label for="descripcion">Descripción:</label>
-      <input
-        type="text"
-        id="descripcion"
-        name="descripcion"
-        required
-      /><br /><br />
+        <label for="descripcion">Descripción:</label>
+        <input
+          type="text"
+          id="descripcion"
+          name="descripcion"
+          required
+        /><br /><br />
 
-      <label for="precio">Precio:</label>
-      <input
-        type="number"
-        id="precio"
-        name="precio"
-        step="0.01"
-        required
-      /><br /><br />
+        <label for="precio">Precio:</label>
+        <input
+          type="number"
+          id="precio"
+          name="precio"
+          step="0.01"
+          required
+        /><br /><br />
 
-      <label for="tamanio_id">Tamaño ID:</label>
-      <input
-        type="number"
-        id="tamanio_id"
-        name="tamanio_id"
-        required
-      /><br /><br />
+        <label>Tamaño:</label><br />
+        <input type="radio" id="pequena" name="tamanio_id" value="1" required />
+        <label for="pequena">Pequeña</label><br />
+        <input type="radio" id="mediana" name="tamanio_id" value="2" required />
+        <label for="mediana">Mediana</label><br />
+        <input type="radio" id="grande" name="tamanio_id" value="3" required />
+        <label for="grande">Grande</label><br />
+        <input type="radio" id="slice" name="tamanio_id" value="4" required />
+        <label for="slice">Slice</label><br /><br />
 
-      <button type="submit">Crear Pizza</button>
-    </form>
-
+        <button
+          type="button"
+          class="navbar-btn"
+          id="eliminar-btn"
+          onclick="cancelarModificacion()"
+        >
+          <i class="fas fa-remove"></i> Cancelar
+        </button>
+        <button type="submit" class="navbar-btn" id="crear-btn">
+          <i class="fas fa-save"></i> Guardar
+        </button>
+      </form>
+    </div>
     <script src="./crear-pizza.js"></script>
   </body>
 </html>
