--- a/public/gestionar-pizzas/eliminar-pizza/eliminar-pizza.html
+++ b/public/gestionar-pizzas/eliminar-pizza/eliminar-pizza.html
@@ -1,29 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Eliminar Pizza</title>
-</head>
-<body>
-    <h1>Eliminar Pizza</h1>
-    <table id="pizzaTable" border="1">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/x-icon" href="../../assets/logo.ico" />
+    <link rel="stylesheet" href="../../index.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
+    <title>PizzARG | Pizza</title>
+  </head>
+  <body class="crud-body">
+    <div class="crud-container">
+      <nav>
+        <div class="navbar">
+          <div class="navbar-izquierdo">
+          </div>
+          <div class="navbar-derecho">
+            <button
+              class="navbar-btn"
+              id="volver-btn"
+              onclick="window.location.href='../ver-pizzas/ver-pizzas.html'"
+            >
+              <i class="fas fa-arrow-left"></i> Volver
+            </button>
+          </div>
+        </div>
+      </nav>
+      <table id="pizzaTable" class="crud-tabla">
         <thead>
-            <tr>
-                <th>ID</th>
-                <th>Imagen</th>
-                <th>Nombre</th>
-                <th>Descripción</th>
-                <th>Precio</th>
-                <th>Tamaño ID</th>
-                <th>Acciones</th>
-            </tr>
+          <tr>
+            <th class="crud-tabla-th">Nombre</th>
+            <th class="crud-tabla-th">Descripción</th>
+            <th class="crud-tabla-th">Precio</th>
+            <th class="crud-tabla-th">Tamaño</th>
+            <th class="crud-tabla-th"></th>
+          </tr>
         </thead>
-        <tbody>
-            <!-- Pizzas se cargarán aquí -->
-        </tbody>
-    </table>
-
+        <tbody></tbody>
+      </table>
+    </div>
     <script src="./eliminar-pizza.js"></script>
-</body>
+  </body>
 </html>
