--- a/public/gestionar-pizzas/modificar-pizza/modificar-pizza.html
+++ b/public/gestionar-pizzas/modificar-pizza/modificar-pizza.html
@@ -1,31 +1,63 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modificar Pizza</title>
-</head>
-<body>
-    <h2>Modificar Pizza</h2>
-    <form id="formModificarPizza">
-        <label for="nombre">Nombre:</label><br>
-        <input type="text" id="nombre" name="nombre"><br>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/x-icon" href="../../assets/logo.ico" />
+    <link rel="stylesheet" href="../../index.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
+    <title>PizzARG | Modificar Pizza</title>
+  </head>
+  <body class="crud-body">
+    <div class="crud-container">
+      <form id="formModificarPizza">
+        <label for="nombre">Nombre:</label><br />
+        <input type="text" id="nombre" name="nombre" required /><br /><br />
 
-        <label for="descripcion">Descripción:</label><br>
-        <textarea id="descripcion" name="descripcion"></textarea><br>
+        <label for="descripcion">Descripción:</label><br />
+        <textarea id="descripcion" name="descripcion" required></textarea
+        ><br /><br />
 
-        <label for="precio">Precio:</label><br>
-        <input type="number" id="precio" name="precio"><br>
+        <label for="precio">Precio:</label><br />
+        <input
+          type="number"
+          id="precio"
+          name="precio"
+          step="0.01"
+          required
+        /><br /><br />
 
-        <label for="imagen">Imagen:</label><br>
-        <input type="text" id="imagen" name="imagen"><br>
+        <label>Tamaño:</label><br />
+        <input type="radio" id="pequena" name="tamanio_id" value="1" required />
+        <label for="pequena">Pequeña</label><br />
+        <input type="radio" id="mediana" name="tamanio_id" value="2" required />
+        <label for="mediana">Mediana</label><br />
+        <input type="radio" id="grande" name="tamanio_id" value="3" required />
+        <label for="grande">Grande</label><br />
+        <input type="radio" id="slice" name="tamanio_id" value="4" required />
+        <label for="slice">Slice</label><br /><br />
 
-        <label for="tamanio_id">Tamaño:</label><br>
-        <input type="text" id="tamanio_id" name="tamanio_id"><br>
-
-        <button type="button" onclick="guardarModificacion()">Guardar</button>
-    </form>
-
+        <button
+          type="button"
+          class="navbar-btn"
+          id="eliminar-btn"
+          onclick="cancelarModificacion()"
+        >
+          <i class="fas fa-remove"></i> Cancelar
+        </button>
+        <button
+          type="button"
+          class="navbar-btn"
+          id="crear-btn"
+          onclick="guardarModificacion()"
+        >
+          <i class="fas fa-save"></i> Guardar
+        </button>
+      </form>
+    </div>
     <script src="./modificar-pizza.js"></script>
-</body>
+  </body>
 </html>
