--- a/public/index.html
+++ b/public/index.html
@@ -4,16 +4,69 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/x-icon" href="./assets/logo.ico" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <title>PizzARG</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./index.css" />
+    <link rel="stylesheet" href="./assets/styles/dashboard.css" />
+    <title>PizzARG</title>
   </head>
   <body>
-    <button
-      onclick="window.location.href='./gestionar-pizzas/ver-pizzas/ver-pizzas.html'"
-    >
-      Gestionar Pizzas
-    </button>
+    <header id="dashboard-header">
+      <img src="./assets/logo.ico" alt="PizzARG Logo" class="logo" />
+      <h1>PizzARG</h1>
+    </header>
+    <main id="dashboard-container">
+      <div
+        class="card"
+        onclick="window.location.href='./gestionar-pizzas/ver-pizzas/ver-pizzas.html'"
+      >
+        <img
+          src="./assets/icons/pizza.ico"
+          alt="Gestionar Pizzas"
+          class="card-img"
+        />
+        <h2>Gestionar Pizzas</h2>
+      </div>
+      <div
+        class="card"
+        onclick="window.location.href='./gestionar-clientes/ver-clientes/ver-clientes.html'"
+      >
+        <img
+          src="./assets/icons/cliente.ico"
+          alt="Gestionar Clientes"
+          class="card-img"
+        />
+        <h2>Gestionar Clientes</h2>
+      </div>
+      <div
+        class="card"
+        onclick="window.location.href='./gestionar-medidas/ver-medidas/ver-medidas.html'"
+      >
+        <img
+          src="./assets/icons/medida.ico"
+          alt="Gestionar Medidas"
+          class="card-img"
+        />
+        <h2>Gestionar Medidas</h2>
+      </div>
+      <div
+        class="card"
+        onclick="window.location.href='./gestionar-toppings/ver-toppings/ver-toppings.html'"
+      >
+        <img
+          src="./assets/icons/topping.ico"
+          alt="Gestionar Toppings"
+          class="card-img"
+        />
+        <h2>Gestionar Toppings</h2>
+      </div>
+    </main>
     <script src="./index.js"></script>
   </body>
 </html>
