--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
   <header id="dashboard-header">
     <img src="./assets/logo.ico" alt="PizzARG Logo" class="logo" />
     <h1>PizzARG</h1>
-    <a href="">Admin</a>
+    <a href="">Admin</a> <!-- agregar la direccion del crud -->
   </header>
   <div class="container">
     <main>
