--- a/public/index.html
+++ b/public/index.html
@@ -1,137 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/x-icon" href="./assets/logo.ico" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./assets/styles/standard.css" />
+    <title>PizzARG</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="icon" type="image/x-icon" href="./assets/logo.ico" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;700&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="./index.css" />
-  <link rel="stylesheet" href="./assets/styles/dashboard.css" />
-  <title>PizzARG</title>
-</head>
-
-<body>
-  <header id="dashboard-header">
-    <img src="./assets/logo.ico" alt="PizzARG Logo" class="logo" />
-    <h1>PizzARG</h1>
-    <a href="">Admin</a> <!-- agregar la direccion del crud -->
-  </header>
-  <div class="container">
-    <main>
-      <section>
-        <article>
-          <h1>Todos los sabores de <span>Pizza&nbsp;Codex</span></h1>
-          <h2>¡Descubrí todas las opciones que tenemos para ofrecerte!</h2>
-          <p>Preparate para un hack gastronómico que combina lo mejor de la pizza con la temática nerdy de tu
-            preferencia! En nuestra pizzería, fusionamos la magia de la pizza con la creatividad de la
-            cultura geek para ofrecerte un festín único y delicioso.</p>
-          <p>Explora nuestro menú lleno de pizzas inspiradas en tus personajes, películas y series favoritas.
-          </p>
-
-          <p>Con un proceso de pedido tan fácil como lanzar un hechizo, satisfacemos tus antojos con un par de
-            clics. ¡Hacé tu pedido hoy te lo entregamos directamente a tu portal!</p>
-        </article>
-      </section>
-      <section class="grid">
-        <div class="card">
-          <img src="https://picsum.photos/1200/900?random=1" alt="Pizza Star Wars">
-          <h3>Pizza Star Wars</h3>
-
-          <div class="detalle">
-            <ul>
-              <li>Mozzarella</li>
-              <li>Tomate del imperio</li>
-              <li>Aceitunas Darth</li>
-              <li>Albahaca Goku</li>
-              <li>Oregano Fresco de huerta</li>
-            </ul>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Non doloremque maxime enim
-              aspernatur est sit aut dolore itaque cumque qua</p>
-            <a href="#">AGREGAR</a>
-          </div>
-        </div>
-
-        <div class="card">
-          <img src="https://picsum.photos/1200/900?random=2" alt="">
-          <h3>Pizza GOT</h3>
-          <div class="detalle">
-            <ul>
-              <li>Mozzarella Dayneris</li>
-              <li>Salsa Dragón</li>
-              <li>Queso Azul Caminante</li>
-              <li>Huevo Snow</li>
-            </ul>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Non doloremque maxime enim
-              aspernatur est sit aut dolore itaque cumque qua</p>
-            <a href="#">AGREGAR</a>
-          </div>
-        </div>
-        <div class="card">
-          <img src="https://picsum.photos/1200/900?random=2" alt="">
-          <h3>Pizza Breaking</h3>
-          <div class="detalle">
-            <ul>
-              <li>Mozzarella Say My Name</li>
-              <li>Salsa Hat</li>
-              <li>Pollo Los Hermanos</li>
-              <li>Hierbas Salamanca</li>
-            </ul>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Non doloremque maxime enim
-              aspernatur est sit aut dolore itaque cumque qua</p>
-            <a href="#">AGREGAR</a>
-          </div>
-        </div>
-        <div class="card">
-          <img src="https://picsum.photos/1200/900?random=2" alt="">
-          <h3>Pizza Breaking</h3>
-          <div class="detalle">
-            <ul>
-              <li>Mozzarella Say My Name</li>
-              <li>Salsa Hat</li>
-              <li>Pollo Los Hermanos</li>
-              <li>Hierbas Salamanca</li>
-            </ul>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Non doloremque maxime enim
-              aspernatur est sit aut dolore itaque cumque qua</p>
-            <a href="#">AGREGAR</a>
-          </div>
-        </div>
-        <div class="card">
-          <img src="https://picsum.photos/1200/900?random=2" alt="">
-          <h3>Pizza Breaking</h3>
-          <div class="detalle">
-            <ul>
-              <li>Mozzarella Say My Name</li>
-              <li>Salsa Hat</li>
-              <li>Pollo Los Hermanos</li>
-              <li>Hierbas Salamanca</li>
-            </ul>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Non doloremque maxime enim
-              aspernatur est sit aut dolore itaque cumque qua</p>
-            <a href="#">AGREGAR</a>
-          </div>
-        </div>
-        <div class="card">
-          <img src="https://picsum.photos/1200/900?random=2" alt="">
-          <h3>Pizza Breaking</h3>
-          <div class="detalle">
-            <ul>
-              <li>Mozzarella Say My Name</li>
-              <li>Salsa Hat</li>
-              <li>Pollo Los Hermanos</li>
-              <li>Hierbas Salamanca</li>
-            </ul>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Non doloremque maxime enim
-              aspernatur est sit aut dolore itaque cumque qua</p>
-            <a href="#">AGREGAR</a>
-          </div>
-        </div>
-      </section>
+  <body>
+    <nav class="nav-container">
+      <div class="navbar-left">
+        <img
+          src="../../assets/logo.ico"
+          alt="PizzARG Logo"
+          class="logo-image"
+        />
+        <h1 class="logo-title">Pizza Codex</h1>
+      </div>
+      <div class="navbar-derecho">
+        <button
+          class="button"
+          id="dashboard-btn"
+        >
+          <i class="fas fa-eye"></i> Ver Pizzas
+        </button>
+        <button
+          class="button"
+          id="dashboard-btn"
+          onclick="window.location.href='./view/gestionar-pizzas/gestionar-pizzas.html'"
+        >
+          <i class="fas fa-cutlery"></i> Gestionar Pizzas
+        </button>
+        <button class="button" id="dashboard-btn"
+        onclick="window.location.href='./view/gestionar-pedidos/gestionar-pedidos.html'">
+          <i class="fas fa-credit-card"></i> Gestionar Pedidos
+        </button>
+        <button
+          class="button"
+          id="dashboard-btn"
+          onclick="window.location.href='../gestionar-pedidos/crear-pedido/index.html'"
+        >
+          <i class="fas fa-bicycle"></i> ¡Haz tu pedido!
+        </button>
+      </div>
+    </nav>
+    <main id="container">
+      <div id="index-container"></div>
     </main>
-  </div>
-  <script src="./index.js"></script>
-</body>
-
+    <script src="./index.js"></script>
+  </body>
 </html>
