add new index.html and consulta_base.html because we need new format

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,13 @@
             <form id="filtroForm">
                 <label for="nombre" class="form-label">Nombre:</label>
                 <input type="text" id="nombre" name="nombre" class="form-control">
+
+                <label for="precioMin" class="form-label">Precio mínimo:</label>
+                <input type="number" id="precioMin" name="precioMin" class="form-control">
+
+                <label for="precioMax" class="form-label">Precio máximo:</label>
+                <input type="number" id="precioMax" name="precioMax" class="form-control">
+
                 <label for="orden" class="form-label">Orden:</label>
                 <select id="orden" name="orden" class="form-select">
                     <option value="asc">Ascendente</option>
