--- a/public/index.html
+++ b/public/index.html
@@ -5,17 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>Pizza Sizes</title>
-<link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/ppal.css">
+</head>
 <body>
     <h1 class="text-center"><strong>Pizza Sizes</strong></h1>
+    <h3 class="text-center">Catálogo de nuestras pizzas</h3>
+    <hr>
     <div class="container flex">
         <aside>
-            <!-- Aquí puedes agregar contenido adicional, como un menú o filtros -->
-            <p>Información de los tamaños de Pizzas</p>
-            <a href="/">Regresar al menu</a>
-            <form id="filtroForm">
+            <p>Información de las Pizzas</p>
+            <a href="/consulta_base.html">Tamaños de las pizzas</a>
+            <form id="filtroPizzas">
                 <label for="nombre" class="form-label">Nombre:</label>
                 <input type="text" id="nombre" name="nombre" class="form-control">
+
+                <label for="descripcion" class="form-label">Descripción:</label>
+                <input type="text" id="descripcion" name="descripcion" class="form-control">
 
                 <label for="precioMin" class="form-label">Precio mínimo:</label>
                 <input type="number" id="precioMin" name="precioMin" class="form-control">
@@ -27,18 +32,17 @@
                 <select id="orden" name="orden" class="form-select">
                     <option value="asc">Ascendente</option>
                     <option value="desc">Descendente</option>
+                    <option value="asc">Ninguno</option>
                 </select>
-
-                <label for="descripcion" class="form-label">Descripción:</label>
-                <input type="text" id="descripcion" name="descripcion" class="form-control">
                 <br>
                 <input type="submit" value="Aplicar filtros" class="btn btn-primary">
             </form>
         </aside>
-        <section id="tamanios">
+        <section id="pizzas">
             <!-- Las tarjetas de pizza se cargarán aquí dinámicamente -->
         </section>
     </div>
-    <script src="./js/main.js"></script>
+
+    <script src="./js/ppal.js"></script>
 </body>
 </html>
